refactor: questionnaire state service